--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,8 +34,8 @@
     </div>
     <form>
         <label for="Hobby">Find all persons with given Hobby:</label><br>
-        <input type="text" id="Hobby" name="Hobby"><br>
-        <input type="submit" value="Submit">
+        <input type="text" id="txt" name="Hobby"><br>
+        <input type="submit" value="reset">
       </form> 
       
     <script src="JavaScript/table.js" type="text/javascript"></script>   
