--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -109,6 +109,7 @@
             (e1) :{ status : 404, "msg": "No content found for this request" }<br>
             (e2) :{ status : 400, "msg": "Field ‘xxx’ is required" } (for example, no name provided)<br>
         </h3>
-
+        
+         <a href="https://docs.google.com/document/d/1KirlOyaEKebb3JQLGyfDtQIB-tMfloEo9_BQV_9JVhc/edit">Doc</a> <br>
     </body>
 </html>
