--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,9 @@
         </table>
 
     </div>
+    
+    <div id = "count"> </div>
+    
     <form>
         <label for="Hobby">Find all persons with given Hobby:</label><br>
         <input type="text" id="txt" name="Hobby"><br>
