--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,137 +1,278 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <style>
-#workflow {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-  
-}
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="CSS/indexCSS.css">
+        <style>
 
-#workflow td, #workflow th {
-  border: 1px solid black;
-  padding: 8px;
-  front-size: 10px;
-	
-  
-  }
-#workflow tr:nth-child(even){background-color: #f2f2f2;}
+        </style>
+    </head>
 
-#workflow tr:hover {background-color: #ddd;}
+    <body>
 
-  
-  #workflow th {
-  background-color: #4CAF50;
-  border: 1px solid black;
-  color: white;
-  text-align: center;
-  font-size: 15px;}
- 
+        <h1>CA2</h1>
 
-/*headline*/
-h1 {
-  color: Black;
-  text-align: center;
-}
-/* new paragaf*/
-h2 {
-	text-align:left;
-}
-/*elaborating text*/
-h3 {
-text-align:left;
-text-indent: 25px;
-}
+        <!--Group information-->
+        <h2>Persons with hobbies</h2>
+        <!--Table => use /fill and use /all to --> 
+        <button id="populate">populate database</button>
+        <button id="loadPersons">All persons</button>
+        <button id="APIDOC">Show API documentation</button>
+        <button id="newPerson">POST test</button>
 
-/*Main test*/
-p {
-  font-family: Times New Roman;
-  font-size: 15px;
-  width: 900px;
-  text-indent: 75px;
-  text-align: justify;
- } 
- a:link, a:visited {
-  background-color: green;
-  color: white;
-  padding: 10px 10px;
-  text-align: left;
-  text-decoration: none;
-  display: inline-block;
-}
-  
-</style>
-</head>
-<body>
-
-<h2>API documentation </h2>
- 
-
-<table id="workflow">
-  <tr>
-    <th>Method </th>
-    <th>URL</th>
-    <th>Request body</th>
-    <th>Response(JSON)</th>
-    <th>Error</th>
-  </tr>
-   
-	<tr>
-    <td>GET</td>
-    <td> /api/person </td>
-    <td> </td>
-    <td>[person, person,...](1) </td>
-    <td> </td>
-  
-  </tr>
-   <tr>
-    <td>GET</td>
-    <td> /api/person/id{1} <br> <br> id: A person by Id </td>
-    <td> </td>
-    <td> person (1) </td>
-    <td> (e1) </td>
-    
-  </tr>
-
-  <tr>
-    <td>POST</td>
-    <td> /api/person </td>
-    <td> person (1) without id </td>
-   	<td> </td>
-   	<td> (e2) </td>
-  </tr>
-
-  <tr>
-    <td>PUT</td>
-    <td> /api/person/delete/{id} </td>
-    <td> id </td>
-   	<td> [person , person...] (1 was deleted)</td>
-   	<td> (e1) </td>
-  </tr>
-  
-</table>
+        <div id="indexTable"> 
 
 
-<h3>Request Body and Response Formats
-(1) User format (don’t provide ID, for POST <br>
- {<br>
-    "id": Number,<br>
-    "name": String,<br>
-    "street": String,<br>
-    "city": String,<br>
-    "zip": String;<br>
-    "phones": String or set;<br>
-    "hobbies": String or set;<br>
-  } <br>
-  <br>
-Errors<br>
-(e) All errors are reported using this format (with the HTTP-status code matching the number)<br>
-{ status : statusCode, "msg": "Explains the problem" }<br>
- 
-(e1) :{ status : 404, "msg": "No content found for this request" }<br>
-(e2) :{ status : 400, "msg": "Field ‘xxx’ is required" } (for example, no name provided)<br>
-</h3>
+        </div>
 
-</body>
+        <div id = "count"> </div>
+
+        <form id = "input">
+            <label for="Hobby">Find all persons with given Hobby:</label><br>
+            <input type="text" id="txt" name="Hobby"><br>
+            <input type="submit" value="reset">
+        </form> 
+
+
+
+
+        <div id ="Documentation"> 
+            <h2>API documentation </h2>
+
+
+            <table id="workflow">
+                <tr>
+                    <th>Method </th>
+                    <th>URL</th>
+                    <th>Request body</th>
+                    <th>Response(JSON)</th>
+                    <th>Error</th>
+                </tr>
+
+                <tr>
+                    <td>GET</td>
+                    <td> /api/person/all </td>
+                    <td> </td>
+                    <td>[person, person,...](1) </td>
+                    <td> </td>
+
+                </tr>
+                <tr>
+                    <td>GET</td>
+                    <td> /api/person/{id} <br> <br> id: A person by Id </td>
+                    <td> </td>
+                    <td> person (1) </td>
+                    <td> (e1) </td>
+
+                </tr>
+
+                <tr>
+                    <td>POST</td>
+                    <td> /api/person </td>
+                    <td> person (1) <br> with no id </td>
+                    <td> </td>
+                    <td> (e2) </td>
+                </tr>
+
+                <tr>
+                    <td>DELETE</td>
+                    <td> /api/person/{id} </td>
+                    <td>  </td>
+                    <td> Person (1)</td>
+                    <td> (e1) </td>
+                </tr>
+
+                <tr>
+                    <td>DELETE</td>
+                    <td> /api/person </td>
+                    <td> Person(1)</td>
+                    <td>person(1) </td>
+                    <td> </td>
+
+                </tr>
+                <tr>
+                    <td></td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+
+                <tr>
+                    <td>GET</td>
+                    <td> /api/person/personsWithHobby/{hName} <br> <br> {hName}: name of the hobby to use as criteria </td>
+                    <td> </td>
+                    <td> [Person, Person, ...] (1) </td>
+                    <td> (e1) </td>
+
+                </tr>
+
+                <tr>
+                    <td>GET</td>
+                    <td> /api/person/countPersonsWithHobby/{hId} <br> <br> {hId}: id of the hobby to use as criteria </td>
+                    <td>  </td>
+                    <td> number </td>
+                    <td> (e2) </td>
+                </tr>
+
+                <tr>
+                    <td>GET</td>
+                    <td> /api/hobby/count </td>
+                    <td>  </td>
+                    <td> number</td>
+                    <td>  </td>
+                </tr>
+
+                <tr>
+                    <td>GET</td>
+                    <td> /api/hobby/all </td>
+                    <td> </td>
+                    <td>[hobby, hobby,...](1) </td>
+                    <td> </td>
+
+                </tr>
+                <tr>
+                    <td>GET</td>
+                    <td> /api/hobby/{id} <br> <br> id: A hobby by Id </td>
+                    <td> </td>
+                    <td> Hobby (2) </td>
+                    <td> (e1) </td>
+
+                </tr>
+
+                <tr>
+                    <td>POST</td>
+                    <td> /api/hobby </td>
+                    <td> Hobby (2)  <br> <br> with no id </td>
+                    <td> Hobby (2) </td>
+                    <td>  </td>
+                </tr>
+
+                <tr>
+                    <td>DELETE</td>
+                    <td> /api/Hobby </td>
+                    <td> Hobby (2) </td>
+                    <td> "Hobby with id {id} has been deleted”</td>
+                    <td>  </td>
+                </tr>
+                <tr>
+                    <td>DELETE</td>
+                    <td> /api/Hobby/{id} </td>
+                    <td>  </td>
+                    <td> "Hobby with id {id} has been deleted”</td>
+                    <td> (e1) </td>
+                </tr>
+
+                <tr>
+                    <td>PUT</td>
+                    <td> /api/hobby/{id} </td>
+                    <td> Hobby (2)</td>
+                    <td>Hobby (2) </td>
+                    <td> </td>
+
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td> </td>
+                </tr>
+                <tr>
+                    <td>PUT</td>
+                    <td> /api/master//personToAddress/{pId}/{aId}     <br>
+                        <br> {pId}:id of the person to add to the address
+                        <br> {aId}: id of the address of which to add a person to</td>
+                    <td> </td>
+                    <td> Address (3) </td>
+                    <td> (e1) </td>
+
+                </tr>
+
+                <tr>
+                    <td>PUT</td>
+                    <td> /api/master/personsToAddress/{aId} <br> <br> {aId}: id of the address object to add persons </td>
+                    <td> [pId1, pId2...](3) <br> with no id </td>
+                    <td> Address</td>
+                    <td> (e1) </td>
+                </tr>
+
+                <tr>
+                    <td>PUT</td>
+                    <td> /api/master/hobbiesToPerson/{pId} <br> <br>{pId}: id of the person to add the hobbies    </td>
+                    <td> [hId1, hId2…](3) </td>
+                    <td> Person (1)</td>
+                    <td> (e1) </td>
+                </tr>
+
+                <tr>
+                    <td>PUT</td>
+                    <td> /api/master/hobbyFromPerson/{hId}/{pId}  <br>
+                        {hId}: id of the hobby to remove from the person <br>
+                        {pId}: id of the person to remove a hobby from
+                    </td>
+                    <td> </td>
+                    <td>person(1) </td>
+                    <td> </td>
+
+                </tr>
+                <tr>
+                    <td>POST</td>
+                    <td> /api/master/populate  <br> Populates database with a couple of entries for Address, Hobby and Person</td>
+                    <td> </td>
+                    <td>msg:success/fail </td>
+                    <td> </td>
+
+                </tr>
+
+            </table>
+
+
+            <h2>Request Body and Response Formats <br></h2>
+            <h3>    Person <br>
+                (1) User format (dont provide ID, for POST <br>
+                {<br>
+                "id": Number,<br>
+                "firstName": String,<br>
+                "lastName": String,<br>
+                "Email": String,<br>
+                "street": String,<br>
+                "city": String,<br>
+                "zip": String;<br>
+                } <br>
+
+                Hobby  <br> 
+                (2) User format (dont provide ID, for POST <br>
+                {<br>
+                "id": Number,<br>
+                "name": String,<br>
+                "description": String,<br>
+                } <br>
+                <br>
+                (3) User format for PUT coupling endpoints = array of ids; for example: <br>
+                [14,16,66]<br>
+                <br>
+                Address <br>
+                (4) User format (dont provide ID, for POST <br>
+                {<br>
+
+                "id": Number,<br>
+                "street": String,<br>
+                "additionalInfo": String,<br>
+                "city": String,<br>
+                "zip": String;<br>
+                } <br>
+
+                <br>
+                Errors<br>
+                (e) All errors are reported using this format (with the HTTP-status code matching the number)<br>
+                { status : statusCode, "msg": "Explains the problem" }<br>
+
+                (e1) :{ status : 404, "msg": "No content found for this request" }<br>
+                (e2) :{ status : 400, "msg": "Field ‘xxx’ is required" } (for example, no name provided)<br>
+            </h3>
+
+            <a href="https://docs.google.com/document/d/1KirlOyaEKebb3JQLGyfDtQIB-tMfloEo9_BQV_9JVhc/edit">Doc</a> <br>
+        </div>
+    </body>
+
+    <script src="JavaScript/table.js" type="text/javascript"></script>   
 </html>
