Added  (nonworking) PUTTest button

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,7 @@
         <button id="loadPersons">All persons</button>
         <button id="APIDOC">Show API documentation</button>
         <button id="newPerson">POST test</button>
+        <button id="editPerson">PUT test</button>
 
         <div id="indexTable"> 
 
